--- a/gradle.properties
+++ b/gradle.properties
@@ -3,17 +3,17 @@ modName = TJF: Core
 # This is a case-sensitive string to identify your mod. Convention is to use lower case.
 modId = tjfcore
 
-modGroup = tjf
+modGroup = com.fulltrix.tjfcore
 
 # Version of your mod.
 # This field can be left empty if you want your mod's version to be determined by the latest git tag instead.
 modVersion = 0.0.1
 
 # Whether to use the old jar naming structure (modid-mcversion-version) instead of the new version (modid-version)
-includeMCVersionJar = true
+includeMCVersionJar = false
 
 # The name of your jar when you produce builds, not including any versioning info
-modArchivesBaseName = tjfcore
+modArchivesBaseName = mymodid
 
 # Will update your build.gradle automatically whenever an update is available
 autoUpdateBuildScript = false
@@ -30,10 +30,10 @@ developmentEnvironmentUserName = Developer
 # Enables using modern java syntax (up to version 17) via Jabel, while still targeting JVM 8.
 # See https://github.com/bsideup/jabel for details on how this works.
 # Using this requires that you use a Java 17 JDK for development.
-enableModernJavaSyntax = false
+enableModernJavaSyntax = true
 
 # Generate a class with String fields for the mod id, name and version named with the fields below
-generateGradleTokenClass = tjfcore.Tags
+generateGradleTokenClass = com.myname.mymodid.Tags
 gradleTokenModId = MODID
 gradleTokenModName = MODNAME
 gradleTokenVersion = VERSION
@@ -49,18 +49,25 @@ apiPackage =
 accessTransformersFile =
 
 # Provides setup for Mixins if enabled. If you don't know what mixins are: Keep it disabled!
-usesMixins = false
+usesMixins = true
 # Specify the package that contains all of your Mixins. You may only place Mixins in this package or the build will fail!
-mixinsPackage =
+mixinsPackage = mixin
+# Automatically generates a mixin config json if enabled, with the name mixins.modid.json
+generateMixinConfig = true
 # Specify the core mod entry class if you use a core mod. This class must implement IFMLLoadingPlugin!
 # Example value: coreModClass = asm.FMLPlugin + modGroup = com.myname.mymodid -> com.myname.mymodid.asm.FMLPlugin
-coreModClass = adapter.TJFPlugin
+coreModClass =
 # If your project is only a consolidation of mixins or a core mod and does NOT contain a 'normal' mod (meaning that
 # there is no class annotated with @Mod) you want this to be true. When in doubt: leave it on false!
 containsMixinsAndOrCoreModOnly = false
 
 # Enables Mixins even if this mod doesn't use them, useful if one of the dependencies uses mixins.
 forceEnableMixins = false
+
+# Outputs pre-transformed and post-transformed loaded classes to run/CLASSLOADER_TEMP. Can be used in combination with
+# diff to see exactly what your ASM or Mixins are changing in the target file.
+# Optionally can be specified with the 'CORE_MOD_DEBUG' env var. Will output a lot of files!
+enableCoreModDebug = false
 
 # Adds CurseMaven, Modrinth Maven, BlameJared maven, and some more well-known 1.12.2 repositories
 includeWellKnownRepositories = true
@@ -73,12 +80,16 @@ includeCommonDevEnvMods = true
 
 # If enabled, you may use 'shadowCompile' for dependencies. They will be integrated in your jar. It is your
 # responsibility check the licence and request permission for distribution, if required.
-usesShadowedDependencies = true
+usesShadowedDependencies = false
 # If disabled, won't remove unused classes from shaded dependencies. Some libraries use reflection to access
 # their own classes, making the minimization unreliable.
-minimizeShadowedDependencies = false
+minimizeShadowedDependencies = true
 # If disabled, won't rename the shadowed classes.
-relocateShadowedDependencies = false
+relocateShadowedDependencies = true
+
+# Separate run directories into "run/client" for runClient task, and "run/server" for runServer task.
+# Useful for debugging a server and client simultaneously. If not enabled, it will be in the standard location "run/"
+separateRunDirectories = false
 
 
 # Publishing to modrinth requires you to set the MODRINTH_API_KEY environment variable to your current modrinth API token.
@@ -114,7 +125,7 @@ curseForgeRelations =
 # This project's release type on CurseForge and/or Modrinth
 # Alternatively this can be set with the 'RELEASE_TYPE' environment variable.
 # Allowed types: release, beta, alpha
-releaseType = alpha
+releaseType = release
 
 # Generate a default changelog for releases. Requires git to be installed, as it uses it to generate a changelog of
 # commits since the last tagged release.
