--- a/dependencies.gradle
+++ b/dependencies.gradle
@@ -23,9 +23,10 @@
  */
 dependencies {
     // Hard Dependencies
-    implementation rfg.deobf("curse.maven:gregtech-ce-unofficial-557242:4910613") // GTCEu 2.7.4
+    implementation rfg.deobf("curse.maven:gregtech-ce-unofficial-557242:4910613") // GTCEu 2.8.1
     implementation rfg.deobf("curse.maven:codechicken-lib-1-8-242818:2779848") // CCL 3.2.3.358
     implementation rfg.deobf("curse.maven:gregicality-multiblocks-564858:4910674") //GCYM 1.2.7
+    implementation rfg.deobf("curse.maven:groovyscript-687577:4905039") //Groovyscript 0.7.0
 
     // Soft Dependencies
     compileOnlyApi rfg.deobf("curse.maven:ctm-267602:2915363") // CTM 1.0.2.31
