--- a/gradle.properties
+++ b/gradle.properties
@@ -13,7 +13,7 @@ modVersion = 0.0.1
 includeMCVersionJar = false
 
 # The name of your jar when you produce builds, not including any versioning info
-modArchivesBaseName = mymodid
+modArchivesBaseName=tjfcore
 
 # Will update your build.gradle automatically whenever an update is available
 autoUpdateBuildScript = false
