update gregtech to 2.8.2
Signed-off-by: brian <brianbosseyt@gmail.com>

--- a/gradle.properties
+++ b/gradle.properties
@@ -33,7 +33,7 @@ developmentEnvironmentUserName = Developer
 enableModernJavaSyntax = true
 
 # Generate a class with String fields for the mod id, name and version named with the fields below
-generateGradleTokenClass = com.myname.mymodid.Tags
+generateGradleTokenClass=com.fulltrix.tjfcore.Tags
 gradleTokenModId = MODID
 gradleTokenModName = MODNAME
 gradleTokenVersion = VERSION
@@ -125,7 +125,7 @@ curseForgeRelations =
 # This project's release type on CurseForge and/or Modrinth
 # Alternatively this can be set with the 'RELEASE_TYPE' environment variable.
 # Allowed types: release, beta, alpha
-releaseType = release
+releaseType=alpha
 
 # Generate a default changelog for releases. Requires git to be installed, as it uses it to generate a changelog of
 # commits since the last tagged release.
