--- a/gradle.properties
+++ b/gradle.properties
@@ -1,4 +1,4 @@
-modName = TJF: Core
+modName=GCYL: CEu
 
 # This is a case-sensitive string to identify your mod. Convention is to use lower case.
 modId = tjfcore
