--- a/dependencies.gradle
+++ b/dependencies.gradle
@@ -23,11 +23,11 @@
  */
 dependencies {
     // Hard Dependencies
-    devOnlyNonPublishable(rfg.deobf(project.files("libs/gregtech-1.12.2-2.9.0-beta-dev.jar"))) // GTCEu 2.8.8
+    devOnlyNonPublishable(rfg.deobf(project.files("libs/gregtech-1.12.2-2.9.0-beta-dev.jar"))) // GTCEu 2.9.0
     implementation rfg.deobf("curse.maven:codechicken-lib-1-8-242818:2779848") // CCL 3.2.3.358
-    implementation rfg.deobf("curse.maven:gregicality-multiblocks-564858:5121714") //GCYM 1.2.8
-    implementation rfg.deobf("curse.maven:groovyscript-687577:5413179") //Groovyscript 1.0.2
-    devOnlyNonPublishable(rfg.deobf(project.files("libs/MaterialReplication-1.3.0-pre1-dev.jar"))) //Material replication 1.2.2
+    devOnlyNonPublishable(rfg.deobf(project.files("libs/GregicalityMultiblocks-1.3-dev.jar"))) //GCYM 1.3
+    implementation rfg.deobf("curse.maven:groovyscript-687577:5507936") //Groovyscript 1.1.1
+    devOnlyNonPublishable(rfg.deobf(project.files("libs/MaterialReplication-1.3.0-pre1-dev.jar"))) //Material replication 1.3.0
 
     // Soft Dependencies
     implementation "CraftTweaker2:CraftTweaker2-MC1120-Main:1.12-4.1.20.684"
