virtual ores unfinished machines implementation

--- a/gradle.properties
+++ b/gradle.properties
@@ -16,7 +16,7 @@ includeMCVersionJar = false
 modArchivesBaseName=gcyl-ceu
 
 # Will update your build.gradle automatically whenever an update is available
-autoUpdateBuildScript = true
+autoUpdateBuildScript = false
 
 minecraftVersion = 1.12.2
 
@@ -80,12 +80,12 @@ includeCommonDevEnvMods = true
 
 # If enabled, you may use 'shadowCompile' for dependencies. They will be integrated in your jar. It is your
 # responsibility check the licence and request permission for distribution, if required.
-usesShadowedDependencies = false
+usesShadowedDependencies = true
 # If disabled, won't remove unused classes from shaded dependencies. Some libraries use reflection to access
 # their own classes, making the minimization unreliable.
 minimizeShadowedDependencies = true
 # If disabled, won't rename the shadowed classes.
-relocateShadowedDependencies = true
+relocateShadowedDependencies = false
 
 # Separate run directories into "run/client" for runClient task, and "run/server" for runServer task.
 # Useful for debugging a server and client simultaneously. If not enabled, it will be in the standard location "run/"
@@ -125,7 +125,7 @@ curseForgeRelations =
 # This project's release type on CurseForge and/or Modrinth
 # Alternatively this can be set with the 'RELEASE_TYPE' environment variable.
 # Allowed types: release, beta, alpha
-releaseType=alpha
+releaseType=beta
 
 # Generate a default changelog for releases. Requires git to be installed, as it uses it to generate a changelog of
 # commits since the last tagged release.
@@ -166,4 +166,4 @@ deploymentDebug = false
 org.gradle.logging.stacktrace = all
 # Sets default memory used for gradle commands. Can be overridden by user or command line properties.
 # This is required to provide enough memory for the Minecraft decompilation process.
-org.gradle.jvmargs = -Xmx3G
+org.gradle.jvmargs = -Xmx8G
