--- a/gradle.properties
+++ b/gradle.properties
@@ -56,7 +56,7 @@ mixinsPackage = mixin
 generateMixinConfig = true
 # Specify the core mod entry class if you use a core mod. This class must implement IFMLLoadingPlugin!
 # Example value: coreModClass = asm.FMLPlugin + modGroup = com.myname.mymodid -> com.myname.mymodid.asm.FMLPlugin
-coreModClass =
+coreModClass = mixin.GCYLEarlyMixinLoader
 # If your project is only a consolidation of mixins or a core mod and does NOT contain a 'normal' mod (meaning that
 # there is no class annotated with @Mod) you want this to be true. When in doubt: leave it on false!
 containsMixinsAndOrCoreModOnly = false
